Added ability to fuzz bootstrap classloader classes on android